# flow-verse

./: .env.example  .gitignore  README.md  docker-compose.yml
verse-agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
verse-agent/src/verse_agent/: __init__.py  __main__.py  main.py
verse-agent/src/verse_agent/api/: dependencies.py  router.py
verse-agent/src/verse_agent/api/v1/: router.py
verse-agent/src/verse_agent/api/v1/endpoints/: __init__.py  health.py
verse-agent/src/verse_agent/cache/: redis_client.py
verse-agent/src/verse_agent/core/: __init__.py  config.py  container.py  errors.py  exception_handlers.py  lifecycle.py  logging.py  middleware.py
verse-agent/src/verse_agent/db/: __init__.py  base.py  session.py
verse-agent/src/verse_agent/db/models/: __init__.py
verse-agent/src/verse_agent/db/repositories/: __init__.py
verse-agent/src/verse_agent/schemas/: __init__.py  common.py  health.py
verse-agent/src/verse_agent/tasks/: __init__.py  celery_app.py  sample.py
verse-agent/tests/: conftest.py  test_celery.py  test_config.py  test_health.py  test_logging.py  test_redis_client.py
verse-web/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  jest.config.cjs  package-lock.json  package.json  tailwind.config.cjs  tsconfig.jest.json  tsconfig.json  vite.config.ts
verse-web/nginx/: default.conf
verse-web/src/: main.tsx
verse-web/src/app/: App.tsx
verse-web/src/config/: env.ts
verse-web/src/hooks/: useFoundationModules.ts
verse-web/src/layouts/: AppShell.tsx
(+19 files in other folders)
