[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verse-agent"
version = "0.1.0"
description = "Production-oriented FastAPI backend skeleton for Flow Verse."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Flow Verse" }]
dependencies = [
  "aiomysql>=0.2,<0.3",
  "celery[redis]>=5.4,<6.0",
  "fastapi>=0.115,<1.0",
  "loguru>=0.7,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "redis>=5.2,<6.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "asgi-lifespan>=2.1,<3.0",
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "pytest-mock>=3.14,<4.0",
]

[project.scripts]
verse-agent = "verse_agent.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning"]
